<resources>
    <string name="app_name">iTune</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="price">Price</string>
    <string name="genre">Genre</string>
    <string name="title">TITLE</string>
    <string name="movie_image">Movie Image</string>
    <string name="forward_arrow_button">Forward Arrow Button</string>
    <string name="movie_saved_successfully">Movie Saved Successfully</string>
    <string name="description">Description</string>
    <string name="already_added_to_favorites">Already added to favorites</string>
    <string name="no_internet">Internet Connection Not Available</string>
    <string name="last">Last Visit</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="an_error_occurred">An error  : %1$s</string>
    <string name="no_internet_connection_showing_saved_data">No internet connection, showing saved data.</string>
</resources>