<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp"
    app:cardElevation="@dimen/_4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">

                <!-- Movie Poster Image -->
                <ImageView
                    android:id="@+id/ivMovieImage"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_120dp"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/movie_picture"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Movie Title -->
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/favoriteMovie"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Movie Price -->
                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:text="@string/price"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <!-- Movie Genre -->
                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:text="@string/genre"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvPrice" />

                <!-- Favorite Icon -->
                <ImageView
                    android:id="@+id/favoriteMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:src="@drawable/ic_fav_unselected"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!-- Long Description TextView (Scrollable) -->
                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    app:layout_constraintTop_toBottomOf="@id/ivMovieImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/tvLongDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_14sp"
                            android:lineSpacingExtra="4dp"
                            android:padding="@dimen/_8dp" />
                </ScrollView>

                <!-- Guideline for Image/Text Alignment -->
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
